--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2021"
 clap = { version = "4.0", features = ["derive"] }
 anyhow = "1.0"
 log = "0.4"
+
+[dev-dependencies]
+assert_cmd = "2.0.12"
+predicates = "3.0.4"
